--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="./logo.svg" />
-    <title>kafei.com</title>
+    <title>AnToAnt.com</title>
     <script type="module" src="./frontend.tsx" async></script>
   </head>
   <body>
