Enhance AI dashboard with an interactive folder graph, real-time streaming text, and an integrated user guide.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,26 @@
         "url": "https://AnToAnt.com",
         "logo": "https://AnToAnt.com/bglogo.png",
         "description": "AI-powered platform for businesses and enthusiasts.",
+        "founder": [
+          {
+            "@type": "Person",
+            "name": "Land Debbarma",
+            "jobTitle": "Co-Founder",
+            "sameAs": [
+              "https://www.linkedin.com/in/land-debbarma/",
+              "https://x.com/landdebbarma?s=21"
+            ]
+          },
+          {
+            "@type": "Person",
+            "name": "Monir Alam",
+            "jobTitle": "Co-Founder",
+            "sameAs": [
+              "https://www.linkedin.com/in/monir-alam-611a66291/",
+              "https://x.com/Monir_21"
+            ]
+          }
+        ],
         "sameAs": []
       }
     </script>
